// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`tsep Ops Expr: 
1\\r
+
2
 1`] = `
Object {
  "left": Object {
    "raw": "1",
    "type": "Literal",
    "value": 1,
  },
  "operator": "+",
  "right": Object {
    "raw": "2",
    "type": "Literal",
    "value": 2,
  },
  "type": "BinaryExpression",
}
`;

exports[`tsep Ops Expr: (1+2)*3 1`] = `
Object {
  "left": Object {
    "left": Object {
      "raw": "1",
      "type": "Literal",
      "value": 1,
    },
    "operator": "+",
    "right": Object {
      "raw": "2",
      "type": "Literal",
      "value": 2,
    },
    "type": "BinaryExpression",
  },
  "operator": "*",
  "right": Object {
    "raw": "3",
    "type": "Literal",
    "value": 3,
  },
  "type": "BinaryExpression",
}
`;

exports[`tsep Ops Expr: (1+2)*3+4-2-5+2/2*3 1`] = `
Object {
  "left": Object {
    "left": Object {
      "left": Object {
        "left": Object {
          "left": Object {
            "left": Object {
              "raw": "1",
              "type": "Literal",
              "value": 1,
            },
            "operator": "+",
            "right": Object {
              "raw": "2",
              "type": "Literal",
              "value": 2,
            },
            "type": "BinaryExpression",
          },
          "operator": "*",
          "right": Object {
            "raw": "3",
            "type": "Literal",
            "value": 3,
          },
          "type": "BinaryExpression",
        },
        "operator": "+",
        "right": Object {
          "raw": "4",
          "type": "Literal",
          "value": 4,
        },
        "type": "BinaryExpression",
      },
      "operator": "-",
      "right": Object {
        "raw": "2",
        "type": "Literal",
        "value": 2,
      },
      "type": "BinaryExpression",
    },
    "operator": "-",
    "right": Object {
      "raw": "5",
      "type": "Literal",
      "value": 5,
    },
    "type": "BinaryExpression",
  },
  "operator": "+",
  "right": Object {
    "left": Object {
      "left": Object {
        "raw": "2",
        "type": "Literal",
        "value": 2,
      },
      "operator": "/",
      "right": Object {
        "raw": "2",
        "type": "Literal",
        "value": 2,
      },
      "type": "BinaryExpression",
    },
    "operator": "*",
    "right": Object {
      "raw": "3",
      "type": "Literal",
      "value": 3,
    },
    "type": "BinaryExpression",
  },
  "type": "BinaryExpression",
}
`;

exports[`tsep Ops Expr: (2 ** 3) ** 4 * (5 ** 6 ** 7) * (8 + 9) 1`] = `
Object {
  "left": Object {
    "left": Object {
      "left": Object {
        "left": Object {
          "raw": "2",
          "type": "Literal",
          "value": 2,
        },
        "operator": "**",
        "right": Object {
          "raw": "3",
          "type": "Literal",
          "value": 3,
        },
        "type": "BinaryExpression",
      },
      "operator": "**",
      "right": Object {
        "raw": "4",
        "type": "Literal",
        "value": 4,
      },
      "type": "BinaryExpression",
    },
    "operator": "*",
    "right": Object {
      "left": Object {
        "raw": "5",
        "type": "Literal",
        "value": 5,
      },
      "operator": "**",
      "right": Object {
        "left": Object {
          "raw": "6",
          "type": "Literal",
          "value": 6,
        },
        "operator": "**",
        "right": Object {
          "raw": "7",
          "type": "Literal",
          "value": 7,
        },
        "type": "BinaryExpression",
      },
      "type": "BinaryExpression",
    },
    "type": "BinaryExpression",
  },
  "operator": "*",
  "right": Object {
    "left": Object {
      "raw": "8",
      "type": "Literal",
      "value": 8,
    },
    "operator": "+",
    "right": Object {
      "raw": "9",
      "type": "Literal",
      "value": 9,
    },
    "type": "BinaryExpression",
  },
  "type": "BinaryExpression",
}
`;

exports[`tsep Ops Expr: -1 + -2 * -3 * 2 1`] = `
Object {
  "left": Object {
    "argument": Object {
      "raw": "1",
      "type": "Literal",
      "value": 1,
    },
    "operator": "-",
    "prefix": true,
    "type": "UnaryExpression",
  },
  "operator": "+",
  "right": Object {
    "left": Object {
      "left": Object {
        "argument": Object {
          "raw": "2",
          "type": "Literal",
          "value": 2,
        },
        "operator": "-",
        "prefix": true,
        "type": "UnaryExpression",
      },
      "operator": "*",
      "right": Object {
        "argument": Object {
          "raw": "3",
          "type": "Literal",
          "value": 3,
        },
        "operator": "-",
        "prefix": true,
        "type": "UnaryExpression",
      },
      "type": "BinaryExpression",
    },
    "operator": "*",
    "right": Object {
      "raw": "2",
      "type": "Literal",
      "value": 2,
    },
    "type": "BinaryExpression",
  },
  "type": "BinaryExpression",
}
`;

exports[`tsep Ops Expr: 1 + -2 1`] = `
Object {
  "left": Object {
    "raw": "1",
    "type": "Literal",
    "value": 1,
  },
  "operator": "+",
  "right": Object {
    "argument": Object {
      "raw": "2",
      "type": "Literal",
      "value": 2,
    },
    "operator": "-",
    "prefix": true,
    "type": "UnaryExpression",
  },
  "type": "BinaryExpression",
}
`;

exports[`tsep Ops Expr: 1 + 2-   3*	4 /8 1`] = `
Object {
  "left": Object {
    "left": Object {
      "raw": "1",
      "type": "Literal",
      "value": 1,
    },
    "operator": "+",
    "right": Object {
      "raw": "2",
      "type": "Literal",
      "value": 2,
    },
    "type": "BinaryExpression",
  },
  "operator": "-",
  "right": Object {
    "left": Object {
      "left": Object {
        "raw": "3",
        "type": "Literal",
        "value": 3,
      },
      "operator": "*",
      "right": Object {
        "raw": "4",
        "type": "Literal",
        "value": 4,
      },
      "type": "BinaryExpression",
    },
    "operator": "/",
    "right": Object {
      "raw": "8",
      "type": "Literal",
      "value": 8,
    },
    "type": "BinaryExpression",
  },
  "type": "BinaryExpression",
}
`;

exports[`tsep Ops Expr: 1 1`] = `
Object {
  "raw": "1",
  "type": "Literal",
  "value": 1,
}
`;

exports[`tsep Ops Expr: 1*(2+3) 1`] = `
Object {
  "left": Object {
    "raw": "1",
    "type": "Literal",
    "value": 1,
  },
  "operator": "*",
  "right": Object {
    "left": Object {
      "raw": "2",
      "type": "Literal",
      "value": 2,
    },
    "operator": "+",
    "right": Object {
      "raw": "3",
      "type": "Literal",
      "value": 3,
    },
    "type": "BinaryExpression",
  },
  "type": "BinaryExpression",
}
`;

exports[`tsep Ops Expr: 1*2 1`] = `
Object {
  "left": Object {
    "raw": "1",
    "type": "Literal",
    "value": 1,
  },
  "operator": "*",
  "right": Object {
    "raw": "2",
    "type": "Literal",
    "value": 2,
  },
  "type": "BinaryExpression",
}
`;

exports[`tsep Ops Expr: 1+2 1`] = `
Object {
  "left": Object {
    "raw": "1",
    "type": "Literal",
    "value": 1,
  },
  "operator": "+",
  "right": Object {
    "raw": "2",
    "type": "Literal",
    "value": 2,
  },
  "type": "BinaryExpression",
}
`;

exports[`tsep Ops Expr: 2 ** 3 ** 4 * 5 ** 6 ** 7 * (8 + 9) 1`] = `
Object {
  "left": Object {
    "left": Object {
      "left": Object {
        "raw": "2",
        "type": "Literal",
        "value": 2,
      },
      "operator": "**",
      "right": Object {
        "left": Object {
          "raw": "3",
          "type": "Literal",
          "value": 3,
        },
        "operator": "**",
        "right": Object {
          "raw": "4",
          "type": "Literal",
          "value": 4,
        },
        "type": "BinaryExpression",
      },
      "type": "BinaryExpression",
    },
    "operator": "*",
    "right": Object {
      "left": Object {
        "raw": "5",
        "type": "Literal",
        "value": 5,
      },
      "operator": "**",
      "right": Object {
        "left": Object {
          "raw": "6",
          "type": "Literal",
          "value": 6,
        },
        "operator": "**",
        "right": Object {
          "raw": "7",
          "type": "Literal",
          "value": 7,
        },
        "type": "BinaryExpression",
      },
      "type": "BinaryExpression",
    },
    "type": "BinaryExpression",
  },
  "operator": "*",
  "right": Object {
    "left": Object {
      "raw": "8",
      "type": "Literal",
      "value": 8,
    },
    "operator": "+",
    "right": Object {
      "raw": "9",
      "type": "Literal",
      "value": 9,
    },
    "type": "BinaryExpression",
  },
  "type": "BinaryExpression",
}
`;

exports[`tsep Ops Expr: 2 ** 3 ** 4 1`] = `
Object {
  "left": Object {
    "raw": "2",
    "type": "Literal",
    "value": 2,
  },
  "operator": "**",
  "right": Object {
    "left": Object {
      "raw": "3",
      "type": "Literal",
      "value": 3,
    },
    "operator": "**",
    "right": Object {
      "raw": "4",
      "type": "Literal",
      "value": 4,
    },
    "type": "BinaryExpression",
  },
  "type": "BinaryExpression",
}
`;
